--- a/.gitignore
+++ b/.gitignore
@@ -1,23 +1,12 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# Temporary folders and files
+.test/
+npm-debug.log
 
-# dependencies
-/node_modules
-/.pnp
-.pnp.js
+# Distribution folders
+dist/
 
-# testing
-/coverage
+# Packages folders
+node_modules/
 
-# production
-/build
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+build/
